<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="#ffc4c7c9">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<TextView
    android:id="@+id/select_lang"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/trans_to_promt"
    android:textSize="23sp"
    android:layout_marginTop="20dp"
    />
        <Spinner
            android:id="@+id/translate_to_spinner"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:layout_toRightOf="@+id/select_lang"
            />

        <ImageButton
            android:src="@drawable/swap1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:layout_toEndOf="@id/translate_to_spinner"
            android:text="@string/swap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/translate_to_spinner"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/to_translate_promt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select tex"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/text_to_translate"
                style="@android:style/Widget.Holo.EditText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0"
                android:gravity="start|bottom"
                android:hint="@string/promt_type_text"
                android:scrollbars="vertical" />

            <Button
                android:id="@+id/translate_button"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/translate_str" />

            <TextView
                android:id="@+id/translated_promt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/translated_text"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/translated_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="0"
                android:scrollbars="vertical" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>